data/derived/fa15/progs/unify/prog0672.ml.out
Characters 28-44:
  let fixpoint (f,b) = wwhile ( fun x -> f, b);;
                              ^^^^^^^^^^^^^^^^
Error: This expression should not be a function, the expected type is
('a -> 'a * bool) * 'a
